fixed checkbox for readability

--- a/src/style.css
+++ b/src/style.css
@@ -415,7 +415,7 @@ input[type="date"] {
 }
 
 svg {
-  fill: green;
+  fill: white;
 }
 
 .footer {
